<resources>
    <string name="app_name">X.509</string>
    <string name="version_prompt">Choose certificate version</string>
    <string name="date_prompt">Choose expiration period</string>
    <string name="serial_number">Serial number</string>
    <string name="key_size">Key size ( in bits )</string>
    <string name="next_page">Next page</string>
    <string name="title_activity_additional_user_input">AdditionalUserInput</string>
    <string name="common_name">Common name</string>
    <string name="organization_unit">Organization unit</string>
    <string name="organization">Organization</string>
    <string name="locality">Locality</string>
    <string name="contry_name">Country name</string>
    <string name="state_or_province_name">State or province name</string>
    <string name="exp_error">You haven\'t chosen expiraton date for certificate</string>
    <string name="version_error">You haven\'t chosen a version for certificate</string>
    <string name="basic_constraints">Basic Constraints</string>
    <string name="is_certificate">Is a CA certificate?</string>
    <string name="critical_basic_constr">Are basic constrains critical</string>
    <string name="path_length">Enter path length : </string>
    <string name="extension_fields">Extension cetrificate fields</string>
    <string name="issuer_email">Enter issuer email: </string>
    <string name="dns_name">Enter DNS name: </string>
    <string name="ip_address">Enter ip address: </string>
    <string name="uri">Enter URI:</string>
    <string name="issuer_alt_name_critical">Is issuer alternative name critical</string>
    <string name="digital_signature">Digital signature</string>
    <string name="non_repundiant">Non repudiation</string>
    <string name="key_encipherment">Key encipherment</string>
    <string name="key_cert_sign">Key certificate signed</string>
    <string name="crl_sign">CRL issuer</string>
    <string name="decipher_only">Decipher only</string>
    <string name="encipher_only">Encipher only</string>
    <string name="key_agreement">Key agreement</string>
    <string name="data_encipherment">Data encipherment</string>
    <string name="key_usage_critical">Is key usage critical</string>
    <string name="key_pair">Generate key pair</string>
    <string name="import_export">Import/Export generated key pair</string>
    <string name="show_details">Show details about generated key pairs</string>
    <string name="sign_certificate">Sign X.509 certificate</string>
    <string name="export_signed">Export signed X.509 certificate</string>
    <string name="export_key_pair">Export key pair</string>
    <string name="import_key_pair">Import key pair</string>
    <string name="file_name">file name</string>
    <string name="pwd_to_protect">password</string>
    <string name="cancel">Cancel</string>
    <string name="generate">Generate</string>
    <string name="use_key_usage">Use key usage in certificate</string>
    <string name="use_issuer_alt">Use issuer alternative name in certificate</string>
    <string name="key_pair_name">Enter key pair name</string>
    <string name="select_key_pair">Select key pair name you want to show details for</string>
</resources>
